--- a/index.html
+++ b/index.html
@@ -1314,6 +1314,10 @@
 </td>
 <td><b>در جریان</b>
 </td></tr></tbody></table>
-
+<script>
+    document.querySelectorAll('a').forEach(link => {
+        link.setAttribute('target', '_blank');
+    });
+</script>
 </body>
 </html>
